solved the overlapping css problems of all form pages

--- a/src/styles/loginForm.css
+++ b/src/styles/loginForm.css
@@ -25,7 +25,7 @@
   border-radius: 8em;
   box-sizing: border-box;
 }
-.passwor-field{
+.password-field{
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
